Added the sign-up & sign-in forms and tested the functionality. Started on sign-out.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <button>Submit</button>
         <div id="error-message"></div>
       </form>
+
+      <button id="sign-out">Sign Out</button>
     </section>
 
     </body>
