Added the ajaxsetup code to insert the user token into the HTTP header. This fixed the sign-out issue.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
         <div id="error-message"></div>
       </form>
 
+      <form id="change-password">
+        <input old-password="passwords[old]" type="password" placeholder="old password" required>
+        <input new-password="passwords[new]" type="password" placeholder="new password" required>
+        <button>Submit</button>
+      </form>
+
+
       <button id="sign-out">Sign Out</button>
+
+
     </section>
 
     </body>
