Added the code to display the game board using bootstrap

--- a/index.html
+++ b/index.html
@@ -40,5 +40,44 @@
 
     </section>
 
+
+    <div class="container">
+      <div class="row">
+        <button id="0", class="col-3 border-right border-bottom text-center">
+          X
+        </button>
+        <button id="1", class="col-3 border-right border-bottom text-center">
+          X
+        </button>
+        <button class="col-3 border-bottom text-center">
+          X
+        </button>
+      </div>
+
+      <div class="row">
+        <button class="col-3 border-right border-bottom text-center">
+          O
+        </button>
+        <button class="col-3 border-right border-bottom text-center">
+          O
+        </button>
+        <button class="col-3 border-bottom text-center">
+          O
+        </button>
+      </div>
+
+      <div class="row">
+        <button class="col-3 border-right text-center">
+          X
+        </button>
+        <button class="col-3 border-right text-center">
+          X
+        </button>
+        <button class="col-3 text-center">
+          X
+        </button>
+      </div>
+</div>
+
     </body>
 </html>
