Hid the game board on form load then show it after successful sign in.

--- a/index.html
+++ b/index.html
@@ -43,38 +43,38 @@
 
     <div class="container">
       <div class="row">
-        <button id="0", class="col-3 border-right border-bottom text-center">
-          X
+        <button id="0", class="col-3 border-right border-bottom border-left-0 border-top-0 text-center">
+
         </button>
-        <button id="1", class="col-3 border-right border-bottom text-center">
-          X
+        <button id="1", class="col-3 border-right border-bottom border-top-0 text-center">
+
         </button>
-        <button class="col-3 border-bottom text-center">
-          X
+        <button class="col-3 border-bottom border-top-0 border-right-0 text-center">
+
         </button>
       </div>
 
       <div class="row">
-        <button class="col-3 border-right border-bottom text-center">
-          O
+        <button class="col-3 border-right border-bottom border-left-0 text-center">
+
         </button>
         <button class="col-3 border-right border-bottom text-center">
-          O
+
         </button>
-        <button class="col-3 border-bottom text-center">
-          O
+        <button class="col-3 border-bottom border-right-0 text-center">
+
         </button>
       </div>
 
       <div class="row">
-        <button class="col-3 border-right text-center">
-          X
+        <button class="col-3 border-right border-left-0 border-bottom-0 text-center">
+
         </button>
-        <button class="col-3 border-right text-center">
-          X
+        <button class="col-3 border-right border-bottom-0 text-center">
+
         </button>
-        <button class="col-3 text-center">
-          X
+        <button class="col-3 border-right-0 border-bottom-0 text-center">
+
         </button>
       </div>
 </div>
