Added the start game button

--- a/index.html
+++ b/index.html
@@ -18,23 +18,24 @@
         <input name="credentials[email]" type="text" placeholder="an@example.email" required>
         <input name="credentials[password]" type="password" placeholder="an example password" required>
         <input name="credentials[password_confirmation]" type="password" placeholder="an example password">
-        <button>Submit</button>
+        <button>Sign Up</button>
       </form>
 
       <form id="sign-in">
         <input name="credentials[email]" type="text" placeholder="an@example.email" required>
         <input name="credentials[password]" type="password" placeholder="an example password" required>
-        <button type='submit'>Submit</button>
+        <button type='submit'>Sign In</button>
       </form>
 
       <form id="change-password">
         <input name="passwords[old]" type="password" placeholder="old password" required>
         <input name="passwords[new]" type="password" placeholder="new password" required>
-        <button type='submit'>Submit</button>
+        <button type='submit'>Change Password</button>
       </form>
 
 
       <button id="sign-out">Sign Out</button>
+      <button id="start-game">Start Game</button>
 
       <div id="error-message"></div>
 
