--- a/index.html
+++ b/index.html
@@ -1,84 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Tic Tac Toe</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title>Tic Tac Toe</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <h1>Tic Tac Toe</h1>
-      <section id="auth-section">
-      <form id="sign-up">
-        <input name="credentials[email]" type="text" placeholder="an@example.email" required>
-        <input name="credentials[password]" type="password" placeholder="an example password" required>
-        <input name="credentials[password_confirmation]" type="password" placeholder="an example password">
-        <button>Sign Up</button>
-      </form>
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
 
-      <form id="sign-in">
-        <input name="credentials[email]" type="text" placeholder="an@example.email" required>
-        <input name="credentials[password]" type="password" placeholder="an example password" required>
-        <button type='submit'>Sign In</button>
-      </form>
+<body>
+  <h1>Tic Tac Toe</h1>
+  <section id="auth-section">
+    <form id="sign-up">
+      <input name="credentials[email]" type="text" placeholder="an@example.email" required>
+      <input name="credentials[password]" type="password" placeholder="an example password" required>
+      <input name="credentials[password_confirmation]" type="password" placeholder="an example password">
+      <button>Sign Up</button>
+    </form>
 
-      <form id="change-password">
-        <input name="passwords[old]" type="password" placeholder="old password" required>
-        <input name="passwords[new]" type="password" placeholder="new password" required>
-        <button type='submit'>Change Password</button>
-      </form>
+    <form id="sign-in">
+      <input name="credentials[email]" type="text" placeholder="an@example.email" required>
+      <input name="credentials[password]" type="password" placeholder="an example password" required>
+      <button type='submit'>Sign In</button>
+    </form>
 
+    <form id="change-password">
+      <input name="passwords[old]" type="password" placeholder="old password" required>
+      <input name="passwords[new]" type="password" placeholder="new password" required>
+      <button type='submit'>Change Password</button>
+    </form>
 
-      <button id="sign-out">Sign Out</button>
-      <button id="start-game">Start Game</button>
+    <button id="sign-out">Sign Out</button>
+    <button id="start-game">Start Game</button>
 
-      <div id="error-message"></div>
+    <div id="error-message"></div>
 
-    </section>
+  </section>
 
+  <div class="container">
+    <div class="row">
+      <button id="0" class="col-3 border-right border-bottom border-left-0 border-top-0 text-center"> </button>
+      <button id="1" class="col-3 border-right border-bottom border-top-0 text-center"> </button>
+      <button id="2" class="col-3 border-bottom border-top-0 border-right-0 text-center"> </button>
+    </div>
 
-    <div class="container">
-      <div class="row">
-        <button id="0", class="col-3 border-right border-bottom border-left-0 border-top-0 text-center">
+    <div class="row">
+      <button id="3" class="col-3 border-right border-bottom border-left-0 text-center"> </button>
+      <button id="4" class="col-3 border-right border-bottom text-center"> </button>
+      <button id="5" class="col-3 border-bottom border-right-0 text-center"> </button>
+    </div>
 
-        </button>
-        <button id="1", class="col-3 border-right border-bottom border-top-0 text-center">
+    <div class="row">
+      <button id="6" class="col-3 border-right border-left-0 border-bottom-0 text-center"> </button>
+      <button id="7" class="col-3 border-right border-bottom-0 text-center"> </button>
+      <button id="8" class="col-3 border-right-0 border-bottom-0 text-center"> </button>
+    </div>
+  </div>
 
-        </button>
-        <button class="col-3 border-bottom border-top-0 border-right-0 text-center">
+</body>
 
-        </button>
-      </div>
-
-      <div class="row">
-        <button class="col-3 border-right border-bottom border-left-0 text-center">
-
-        </button>
-        <button class="col-3 border-right border-bottom text-center">
-
-        </button>
-        <button class="col-3 border-bottom border-right-0 text-center">
-
-        </button>
-      </div>
-
-      <div class="row">
-        <button class="col-3 border-right border-left-0 border-bottom-0 text-center">
-
-        </button>
-        <button class="col-3 border-right border-bottom-0 text-center">
-
-        </button>
-        <button class="col-3 border-right-0 border-bottom-0 text-center">
-
-        </button>
-      </div>
-</div>
-
-    </body>
 </html>
