--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 <body>
   <h1>Tic Tac Toe</h1>
+  <h3 id="error-message"></h3>
+
+  <button id="sign-out">Sign Out</button>
+  <button id="start-game">Start New Game</button>
+  <button id="settings">Settings</button>
+
+  <section id="form1">
+    <button id="sign-in-button">Log In</button>
+    <button id="sign-up-button">New User</button>
+  </section>
   <section id="auth-section">
     <form id="sign-up">
       <input name="credentials[email]" type="text" placeholder="an@example.email" required>
@@ -34,10 +44,7 @@
       <button type='submit'>Change Password</button>
     </form>
 
-    <button id="sign-out">Sign Out</button>
-    <button id="start-game">Start Game</button>
 
-    <div id="error-message"></div>
 
   </section>
 
