Fixed winner validation code. Added red font  for winning row.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 <body>
   <h1>Tic Tac Toe</h1>
   <h3 id="error-message"></h3>
+    <!-- Loader Animation -->
+<div class="loader"></div>
 
+<div class="myButtons">
   <button id="sign-out">Sign Out</button>
   <button id="start-game">Start New Game</button>
   <button id="settings">Settings</button>
+</div>
 
   <section id="form1">
     <button id="sign-in-button">Log In</button>
@@ -66,6 +70,10 @@
       <button id="7" class="col-3 border-right border-bottom-0 text-center"></button>
       <button id="8" class="col-3 border-right-0 border-bottom-0 text-center"></button>
     </div>
+  </div>
+  <h3 id="winner-message"></h3>
+  <div class="backButton">
+    <button id="back">Back</button>
   </div>
 
 </body>
