Updated the html

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
   </section>
 
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <button id="0" class="col-3 border-right border-bottom border-left-0 border-top-0 text-center"></button>
       <button id="1" class="col-3 border-right border-bottom border-top-0 text-center"></button>
       <button id="2" class="col-3 border-bottom border-top-0 border-right-0 text-center"></button>
     </div>
 
-    <div class="row">
+    <div class="row justify-content-center">
       <button id="3" class="col-3 border-right border-bottom border-left-0 text-center"></button>
       <button id="4" class="col-3 border-right border-bottom text-center"></button>
       <button id="5" class="col-3 border-bottom border-right-0 text-center"></button>
     </div>
 
-    <div class="row">
+    <div class="row justify-content-center">
       <button id="6" class="col-3 border-right border-left-0 border-bottom-0 text-center"></button>
       <button id="7" class="col-3 border-right border-bottom-0 text-center"></button>
       <button id="8" class="col-3 border-right-0 border-bottom-0 text-center"></button>
