Added the game history feature and 'Back' button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <button id="sign-out">Sign Out</button>
   <button id="start-game">Start New Game</button>
   <button id="settings">Settings</button>
+  <div class="backButton">
+    <button id="back">Back</button>
+  </div>
+  <button id="history">Game History</button>
 </div>
 
   <section id="form1">
@@ -72,9 +76,8 @@
     </div>
   </div>
   <h3 id="winner-message"></h3>
-  <div class="backButton">
-    <button id="back">Back</button>
-  </div>
+
+  <h6 class="game-history"></h6>
 
 </body>
 
